src/parser/rustParser.java
// Generated from rust.g4 by ANTLR 4.9.2

    package parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class rustParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, INT=42, BOOLEAN=43, STR=44, IDF=45, WS=46, 
		COMMENT=47;
	public static final int
		RULE_program = 0, RULE_decl = 1, RULE_declFunction = 2, RULE_declArgs = 3, 
		RULE_declArg = 4, RULE_declReturnType = 5, RULE_bloc = 6, RULE_instr = 7, 
		RULE_accessTable = 8, RULE_expr = 9, RULE_expr1 = 10, RULE_expr2 = 11, 
		RULE_expr3 = 12, RULE_expr4 = 13, RULE_expr5 = 14, RULE_expr6 = 15, RULE_expr7 = 16, 
		RULE_expr8 = 17, RULE_expr9 = 18, RULE_passArgs = 19, RULE_declStruct = 20, 
		RULE_type = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "decl", "declFunction", "declArgs", "declArg", "declReturnType", 
			"bloc", "instr", "accessTable", "expr", "expr1", "expr2", "expr3", "expr4", 
			"expr5", "expr6", "expr7", "expr8", "expr9", "passArgs", "declStruct", 
			"type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'fn'", "'('", "')'", "'()'", "','", "'mut'", "':'", "'->'", "'{'", 
			"'}'", "';'", "'let'", "'='", "'while'", "'return'", "'if'", "'else'", 
			"'['", "']'", "'print'", "'!'", "'||'", "'&&'", "'=='", "'!='", "'<'", 
			"'<='", "'>'", "'>='", "'+'", "'-'", "'*'", "'/'", "'%'", "'&'", "'&mut'", 
			"'.'", "'len'", "'vec'", "'struct'", "'Vec<'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "INT", "BOOLEAN", "STR", "IDF", "WS", 
			"COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "rust.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public rustParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(rustParser.EOF, 0); }
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof rustVisitor ) return ((rustVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0 || _la==T__39) {
				{
				{
				setState(44);
				decl();
				}
				}
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(50);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public DeclFunctionContext declFunction() {
			return getRuleContext(DeclFunctionContext.class,0);
		}
		public DeclStructContext declStruct() {
			return getRuleContext(DeclStructContext.class,0);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof rustVisitor ) return ((rustVisitor<? extends T>)visitor).visitDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decl);
		try {
			setState(54);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(52);
				declFunction();
				}
				break;
			case T__39:
				enterOuterAlt(_localctx, 2);
				{
				setState(53);
				declStruct();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclFunctionContext extends ParserRuleContext {
		public TerminalNode IDF() { return getToken(rustParser.IDF, 0); }
		public DeclReturnTypeContext declReturnType() {
			return getRuleContext(DeclReturnTypeContext.class,0);
		}
		public BlocContext bloc() {
			return getRuleContext(BlocContext.class,0);
		}
		public DeclArgsContext declArgs() {
			return getRuleContext(DeclArgsContext.class,0);
		}
		public DeclFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declFunction; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof rustVisitor ) return ((rustVisitor<? extends T>)visitor).visitDeclFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclFunctionContext declFunction() throws RecognitionException {
		DeclFunctionContext _localctx = new DeclFunctionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declFunction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(T__0);
			setState(57);
			match(IDF);
			setState(63);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				{
				setState(58);
				match(T__1);
				setState(59);
				declArgs();
				setState(60);
				match(T__2);
				}
				break;
			case T__3:
				{
				setState(62);
				match(T__3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(65);
			declReturnType();
			setState(66);
			bloc();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclArgsContext extends ParserRuleContext {
		public List<DeclArgContext> declArg() {
			return getRuleContexts(DeclArgContext.class);
		}
		public DeclArgContext declArg(int i) {
			return getRuleContext(DeclArgContext.class,i);
		}
		public DeclArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declArgs; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof rustVisitor ) return ((rustVisitor<? extends T>)visitor).visitDeclArgs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclArgsContext declArgs() throws RecognitionException {
		DeclArgsContext _localctx = new DeclArgsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declArgs);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(68);
					declArg();
					setState(69);
					match(T__4);
					}
					} 
				}
				setState(75);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5 || _la==IDF) {
				{
				setState(76);
				declArg();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclArgContext extends ParserRuleContext {
		public TerminalNode IDF() { return getToken(rustParser.IDF, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public DeclArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declArg; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof rustVisitor ) return ((rustVisitor<? extends T>)visitor).visitDeclArg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclArgContext declArg() throws RecognitionException {
		DeclArgContext _localctx = new DeclArgContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declArg);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(79);
				match(T__5);
				}
			}

			setState(82);
			match(IDF);
			setState(83);
			match(T__6);
			setState(84);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclReturnTypeContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public DeclReturnTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declReturnType; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof rustVisitor ) return ((rustVisitor<? extends T>)visitor).visitDeclReturnType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclReturnTypeContext declReturnType() throws RecognitionException {
		DeclReturnTypeContext _localctx = new DeclReturnTypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declReturnType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__7) {
				{
				setState(86);
				match(T__7);
				setState(87);
				type();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlocContext extends ParserRuleContext {
		public List<InstrContext> instr() {
			return getRuleContexts(InstrContext.class);
		}
		public InstrContext instr(int i) {
			return getRuleContext(InstrContext.class,i);
		}
		public BlocContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloc; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof rustVisitor ) return ((rustVisitor<? extends T>)visitor).visitBloc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlocContext bloc() throws RecognitionException {
		BlocContext _localctx = new BlocContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_bloc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(T__8);
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__8) | (1L << T__11) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__19) | (1L << T__20) | (1L << T__30) | (1L << T__31) | (1L << T__34) | (1L << T__35) | (1L << T__38) | (1L << INT) | (1L << BOOLEAN) | (1L << IDF))) != 0)) {
				{
				{
				setState(91);
				instr();
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(97);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstrContext extends ParserRuleContext {
		public InstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instr; }
	 
		public InstrContext() { }
		public void copyFrom(InstrContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class InstrWhileContext extends InstrContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public BlocContext bloc() {
			return getRuleContext(BlocContext.class,0);
		}
		public InstrWhileContext(InstrContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof rustVisitor ) return ((rustVisitor<? extends T>)visitor).visitInstrWhile(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class InstrDeclLetStructContext extends InstrContext {
		public List<TerminalNode> IDF() { return getTokens(rustParser.IDF); }
		public TerminalNode IDF(int i) {
			return getToken(rustParser.IDF, i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public DeclArgsContext declArgs() {
			return getRuleContext(DeclArgsContext.class,0);
		}
		public InstrDeclLetStructContext(InstrContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof rustVisitor ) return ((rustVisitor<? extends T>)visitor).visitInstrDeclLetStruct(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class InstrReturnContext extends InstrContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public InstrReturnContext(InstrContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof rustVisitor ) return ((rustVisitor<? extends T>)visitor).visitInstrReturn(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class InstrExprContext extends InstrContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public InstrExprContext(InstrContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof rustVisitor ) return ((rustVisitor<? extends T>)visitor).visitInstrExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class InstrIfElseContext extends InstrContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<BlocContext> bloc() {
			return getRuleContexts(BlocContext.class);
		}
		public BlocContext bloc(int i) {
			return getRuleContext(BlocContext.class,i);
		}
		public InstrIfElseContext(InstrContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof rustVisitor ) return ((rustVisitor<? extends T>)visitor).visitInstrIfElse(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class InstrDeclLetContext extends InstrContext {
		public TerminalNode IDF() { return getToken(rustParser.IDF, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public InstrDeclLetContext(InstrContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof rustVisitor ) return ((rustVisitor<? extends T>)visitor).visitInstrDeclLet(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class InstrAssignationTableContext extends InstrContext {
		public AccessTableContext accessTable() {
			return getRuleContext(AccessTableContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public InstrAssignationTableContext(InstrContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof rustVisitor ) return ((rustVisitor<? extends T>)visitor).visitInstrAssignationTable(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class InstrAssignationContext extends InstrContext {
		public TerminalNode IDF() { return getToken(rustParser.IDF, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public InstrAssignationContext(InstrContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof rustVisitor ) return ((rustVisitor<? extends T>)visitor).visitInstrAssignation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstrContext instr() throws RecognitionException {
		InstrContext _localctx = new InstrContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_instr);
		int _la;
		try {
			setState(158);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				_localctx = new InstrExprContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				expr();
				setState(100);
				match(T__10);
				}
				break;
			case 2:
				_localctx = new InstrDeclLetContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(102);
				match(T__11);
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__5) {
					{
					setState(103);
					match(T__5);
					}
				}

				setState(106);
				match(IDF);
				setState(107);
				match(T__6);
				setState(108);
				type();
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__12) {
					{
					setState(109);
					match(T__12);
					setState(110);
					expr();
					}
				}

				setState(113);
				match(T__10);
				}
				break;
			case 3:
				_localctx = new InstrDeclLetStructContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(115);
				match(T__11);
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__5) {
					{
					setState(116);
					match(T__5);
					}
				}

				setState(119);
				match(IDF);
				setState(120);
				match(T__6);
				setState(121);
				type();
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__12) {
					{
					setState(122);
					match(T__12);
					setState(123);
					match(IDF);
					setState(124);
					match(T__8);
					setState(125);
					declArgs();
					setState(126);
					match(T__9);
					}
				}

				setState(130);
				match(T__10);
				}
				break;
			case 4:
				_localctx = new InstrWhileContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(132);
				match(T__13);
				setState(133);
				expr();
				setState(134);
				bloc();
				}
				break;
			case 5:
				_localctx = new InstrReturnContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(136);
				match(T__14);
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__8) | (1L << T__19) | (1L << T__20) | (1L << T__30) | (1L << T__31) | (1L << T__34) | (1L << T__35) | (1L << T__38) | (1L << INT) | (1L << BOOLEAN) | (1L << IDF))) != 0)) {
					{
					setState(137);
					expr();
					}
				}

				setState(140);
				match(T__10);
				}
				break;
			case 6:
				_localctx = new InstrIfElseContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(141);
				match(T__15);
				setState(142);
				expr();
				setState(143);
				bloc();
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__16) {
					{
					setState(144);
					match(T__16);
					setState(145);
					bloc();
					}
				}

				}
				break;
			case 7:
				_localctx = new InstrAssignationContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(148);
				match(IDF);
				setState(149);
				match(T__12);
				setState(150);
				expr();
				setState(151);
				match(T__10);
				}
				break;
			case 8:
				_localctx = new InstrAssignationTableContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(153);
				accessTable();
				setState(154);
				match(T__12);
				setState(155);
				expr();
				setState(156);
				match(T__10);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AccessTableContext extends ParserRuleContext {
		public TerminalNode IDF() { return getToken(rustParser.IDF, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public AccessTableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_accessTable; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof rustVisitor ) return ((rustVisitor<? extends T>)visitor).visitAccessTable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AccessTableContext accessTable() throws RecognitionException {
		AccessTableContext _localctx = new AccessTableContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_accessTable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(IDF);
			setState(165); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(161);
				match(T__17);
				setState(162);
				expr();
				setState(163);
				match(T__18);
				}
				}
				setState(167); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__17 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ExprPrintContext extends ExprContext {
		public TerminalNode STR() { return getToken(rustParser.STR, 0); }
		public ExprPrintContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof rustVisitor ) return ((rustVisitor<? extends T>)visitor).visitExprPrint(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExprBlocContext extends ExprContext {
		public BlocContext bloc() {
			return getRuleContext(BlocContext.class,0);
		}
		public ExprBlocContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof rustVisitor ) return ((rustVisitor<? extends T>)visitor).visitExprBloc(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExprComputationContext extends ExprContext {
		public Expr1Context expr1() {
			return getRuleContext(Expr1Context.class,0);
		}
		public ExprComputationContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof rustVisitor ) return ((rustVisitor<? extends T>)visitor).visitExprComputation(this);
			else return visitor.visitChildren(this);
		}
	}
